src/modules/mapview/mapview.scss
body {
    margin-bottom: 0;
    
    .flex-fill {
        flex: 1 1 auto;
        min-height: 100vh;
    }

    .container-fluid {
        padding: 0;
    }

    .row {
        margin: 0;
    }

    .custom-control-label::before,
    .custom-control-label::after {
        top: .35rem;
    }
}

/* SIDEBARS */
.bm-burger {
    position: fixed;
    width: 36px;
    height: 30px;
    left: 36px;
    top: 36px;
}

.bm-burger-bars {
    background-color: #373a47;
}

.bm-burger-button {
    position: fixed;
    width: 20px;
    height: 18px;
    left: 20px;
    top: 20px;
}

.bm-menu {
    background: #fff;
    font-size: 1.15em;
    padding-top: 1.5rem;
    overflow: hidden !important;
}

.bm-menu-wrap {
    max-width: 600px;
}

.bm-cross {
    background-color: #bdc3c7;
}

.bm-item-list {
    display: flex;
    flex-direction: column;
    max-height: 100%;
}

/* SLIDER TOOLSTRIPS */
.rc-tooltip { z-index: 1500; }
.rc-slider-tooltip { z-index: 1500; }

@media screen and (max-width: 768px) {
    .bm-menu-wrap {
        width: 100%;
    }
}

